class Garden {

  final String? id;
  final String name;
  final String location;
  final double area;


  const Garden({
    this.id,
    required this.name,
    required this.location,
    required this.area,
  });
}